# lstm-equity-forecasting

./: .gitignore  QUICK_START.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
TimeSeriesSplit/: evaluate.py  models.py
caching/: preprocessing.py
configs/: default.yaml
plots/: pipeline.py
src/lstm_forecasting/: baselines.py  data_ingestion.py  evaluate.py  indicators.py  logging_utils.py  models.py  pipeline.py  preprocessing.py
tests/:  test_indicators.py  test_data_ingestion.py  test_evaluate.py  test_indicators.py  test_models.py  test_preprocessing.py
