[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lstm-equity-forecasting"
version = "0.1.0"
description = "LSTM-based short-term equity price forecasting pipeline with technical indicators and ARIMA/GARCH benchmarks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["lstm", "deep-learning", "finance", "forecasting", "time-series", "equities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow",
    "scikit-learn>=1.4",
    "tensorflow>=2.13",
    "matplotlib>=3.8",
    "yfinance>=0.2.40",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "statsmodels>=0.14",
    "arch>=6.3",
    "PyYAML>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "black>=24.0", "ruff>=0.4", "flake8>=7.0"]

[project.scripts]
lstm-forecast = "lstm_forecasting.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]